Mejorado los filtros de las apis, añadiendo el order_by y el order_dir, a parte del filtrado por name.
